CON-46: SDK Improvements