@@ -17,12 +17,15 @@ import java.nio.channels.SocketChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class PropertyManager {
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+    private static final Logger LOG = Logger.getLogger(PropertyManager.class.getName());
 
     private final Map<String, PropertyUpdateCallback> callbacks;
     private final PropertyRepository repository;
@@ -44,7 +47,7 @@ public class PropertyManager {
                            @NotNull String unixSocketPath,
                            @NotNull PropertyUpdateCallback defaultCallback) {
         this.repository = Objects.requireNonNull(repository);
-        this.callbacks = new HashMap<>();
+        this.callbacks = new ConcurrentHashMap<>();
         this.defaultCallback = Objects.requireNonNull(defaultCallback);
         this.configFilePath = Path.of(Objects.requireNonNull(configFilePath));
         this.unixSocketPath = Path.of(Objects.requireNonNull(unixSocketPath));
@@ -62,8 +65,8 @@ public class PropertyManager {
             if (Files.exists(configFilePath)) {
                 return;
             }
-            System.out.printf("[PropertyManager] Config file not found, waiting... (%d/%d): %s%n",
-                    attempt, maxAttempts, configFilePath);
+            LOG.info(String.format("Config file not found, waiting... (%d/%d): %s",
+                    attempt, maxAttempts, configFilePath));
             try {
                 Thread.sleep(1_000);
             } catch (InterruptedException e) {
@@ -113,9 +116,13 @@ public class PropertyManager {
 
     public void store(@NotNull String key,
                       @Nullable String newValue) {
-        Object oldValue = repository.store(key, newValue);
-        callbacks.getOrDefault(key, defaultCallback)
-                .apply(key, oldValue, newValue);
+        String oldValue = repository.store(key, newValue);
+        try {
+            callbacks.getOrDefault(key, defaultCallback)
+                    .apply(key, oldValue, newValue);
+        } catch (Exception e) {
+            LOG.log(Level.WARNING, "cms: callback threw for key '" + key + "'", e);
+        }
     }
 
     @NotNull
@@ -125,33 +132,36 @@ public class PropertyManager {
             return existing;
         }
 
-        System.out.println("Starting socket-listening thread");
-        Thread t = new Thread(() -> {
-            try {
-                Files.createDirectories(unixSocketPath.getParent() != null ? unixSocketPath.getParent() : Path.of("."));
-                Files.deleteIfExists(unixSocketPath);
+        LOG.info("Starting socket-listening virtual thread");
+        Thread t = Thread.ofVirtual()
+                .name("property-manager-socket-listener")
+                .unstarted(() -> {
+                    try {
+                        Files.createDirectories(unixSocketPath.getParent() != null ? unixSocketPath.getParent() : Path.of("."));
+                        Files.deleteIfExists(unixSocketPath);
 
-                try (ServerSocketChannel server = ServerSocketChannel.open(StandardProtocolFamily.UNIX)) {
-                    server.bind(UnixDomainSocketAddress.of(unixSocketPath));
-                    System.out.println("Listening socket...");
-                    while (!Thread.currentThread().isInterrupted()) {
-                        try (SocketChannel client = server.accept()) {
-                            SocketToPropertyManagerBridge bridge = new SocketToPropertyManagerBridge(
-                                    this,
-                                    Channels.newInputStream(client)
-                            );
-                            bridge.processStream();
+                        try (ServerSocketChannel server = ServerSocketChannel.open(StandardProtocolFamily.UNIX)) {
+                            server.bind(UnixDomainSocketAddress.of(unixSocketPath));
+                            LOG.info("Listening socket...");
+                            while (!Thread.currentThread().isInterrupted()) {
+                                try (SocketChannel client = server.accept()) {
+                                    SocketToPropertyManagerBridge bridge = new SocketToPropertyManagerBridge(
+                                            this,
+                                            Channels.newInputStream(client)
+                                    );
+                                    bridge.processStream();
+                                } catch (IOException e) {
+                                    LOG.log(Level.WARNING, "cms: error processing connection", e);
+                                }
+                            }
+                        } finally {
+                            Files.deleteIfExists(unixSocketPath);
                         }
+                    } catch (IOException e) {
+                        LOG.log(Level.SEVERE, "cms: socket listener failed", e);
                     }
-                } finally {
-                    Files.deleteIfExists(unixSocketPath);
-                }
-            } catch (IOException e) {
-                e.printStackTrace(System.err);
-            }
-        }, "property-manager-socket-listener");
+                });
 
-        t.setDaemon(true);
         socketListenerThread = t;
         t.start();
         return t;
